@@ -1,6 +1,12 @@
 2009-06-05  Gary Benson  <gbenson@redhat.com>
 
 	* ports/hotspot/src/share/vm/shark/sharkTopLevelBlock.cpp
+	(SharkTopLevelBlock::acquire_method_lock): Removed constant
+	pool lookup.
+
+2009-06-05  Gary Benson  <gbenson@redhat.com>
+
+	* ports/hotspot/src/share/vm/shark/sharkTopLevelBlock.cpp
 	(SharkTopLevelBlock::do_new): Removed constant pool lookup.
 	(SharkTopLevelBlock::scan_for_traps): Add traps for new.
 
